<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">NYU Safety</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="string_button_signup" translatable="false">Sign Up</string>
    <string name="string_text_login" translatable="false">Log In</string>
    <string name="string_text_member" translatable="false">Already a member?</string>
    <string name="string_text_name" translatable="false"><i>Name</i></string>
    <string name="string_text_email" translatable="false"><i>Email</i></string>
    <string name="string_text_atnyu" translatable="false"><i>NYU email</i></string>
    <string name="string_text_password" translatable="false"><i>Password</i></string>
    <string name="string_text_repassword" translatable="false"><i>Re-enter</i></string>
    <string name="string_text_phone" translatable="false"><i>Phone</i></string>
    <string name="string_text_code" translatable="false"><i>Verification code</i></string>
    <string name="string_text_resend" translatable="false">Resend?</string>
    <string name="string_text_submit" translatable="false">Submit</string>
    <string name="string_app_name" translatable="false">NYU SAFETY</string>
    <string name="string_nyu_signup" translatable="false">Sign up with NYU email</string>
    <string name="string_button_help">Ask For Help</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_not_member">Not a member?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="action_password">change password</string>
    <string name="action_logout">logout</string>
    <string name="dialog_always">Send updates all the time</string>
    <string name="dialog_never">Never(not recommended)</string>
    <string name="dialog_plugged">When plugged in to a power source</string>
    <string name="dialog_recommended">If the power is more than 15 percent(recommended)</string>
    <string name="no_connection_retry">Retry</string>
    <string name="no_connection">No network connection</string>
    <string name="old_password"><i>Old password</i></string>
    <string name="new_password"><i>New password</i></string>
    <string name="activity_settings">Settings</string>
    <string name="activity_feedback">Feedback</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_new_password">New Password</string>
    <string name="title_forgot_password">Forgot Password</string>
</resources>