<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/signup_linear_no_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_connection"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/signup_button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/nyupurple"
            android:text="@string/no_connection_retry"
            android:textColor="@color/white" />

    </LinearLayout>

    <EditText
        android:id="@+id/signup_edit_name"
        style="@style/edit_texts"
        android:hint="@string/string_text_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_edit_email"
        style="@style/edit_texts"
        android:hint="@string/string_text_atnyu"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_edit_phone"
        style="@style/edit_texts"
        android:hint="@string/string_text_phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/signup_edit_password"
        style="@style/edit_texts"
        android:hint="@string/string_text_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_edit_repassword"
        style="@style/edit_texts"
        android:hint="@string/string_text_repassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_button_submit"
        style="@style/buttons"
        android:text="@string/string_button_signup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_text_member"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/nyupurple" />

        <TextView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/string_text_login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />
    </LinearLayout>
</LinearLayout>
</ScrollView>