<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_linear_no_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/no_connection"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/login_button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/nyupurple"
            android:text="@string/no_connection_retry"
            android:textColor="@color/white" />

    </LinearLayout>

    <EditText
        android:id="@+id/login_edit_email"
        style="@style/edit_texts"
        android:hint="@string/string_text_email"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/login_edit_password"
        style="@style/edit_texts"
        android:hint="@string/string_text_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_text_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:text="@string/login_forgot_password"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/login_button_submit"
        style="@style/buttons"
        android:text="@string/string_text_login" >
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_not_member"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/nyupurple" />

        <TextView
            android:id="@+id/signup_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/string_button_signup"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />
    </LinearLayout>

</LinearLayout>
</ScrollView>