<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/newpassword_linear_no_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_connection"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/newpassword_button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/nyupurple"
            android:text="@string/no_connection_retry"
            android:textColor="@color/white" />

    </LinearLayout>

    <EditText
        android:id="@+id/newpassword_edit_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textColorHint="@color/ghostwhite" >
    </EditText>

    <EditText
        android:id="@+id/newpassword_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textColorHint="@color/ghostwhite" >
    </EditText>

    <EditText
        android:id="@+id/newpassword_edit_reenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/string_text_repassword"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textColorHint="@color/ghostwhite" >
    </EditText>

    <Button
        android:id="@+id/newpassword_button_submit"
        style="@style/buttons"
        android:text="@string/string_text_submit" >
    </Button>

</LinearLayout>
</ScrollView>